Added Icons etc

--- a/index.html
+++ b/index.html
@@ -41,15 +41,11 @@
                        
                     </div>
                     <div class="collapse navbar-collapse" id="navigation">
-                        <ul class="nav navbar-nav navbar-right">
+                        <ul class="nav navbar-nav navbar-left">
                             <li class="active"><a href="#page-top">Home</a></li>
-                            <li><a href="#app-features-area">About</a></li>
-                            <li><a href="#awesome-features-area">Features</a></li>
-                            <li><a href="#app-screenshot-area">Screenshots</a></li>
+                            <li><a href="#how-it-works-area">About</a></li>
                             <li><a href="#pricing-table-area">Pricing</a></li>
-                            <li><a href="#faq-area">FAQs</a></li>
-                            <li><a href="#blog-area">Blog</a></li>
-                            <li><a href="#contact-area">Contact</a></li>
+  
                         </ul>
                     </div>
                 </div>
@@ -98,18 +94,18 @@
                         <div class="col-sm-4 p-0 wow fadeIn" data-wow-duration="2s">
                             <div class="hiw-feature one media">
                                 <div class="hiw-feature-icon media-left">
-                                    <img src="img/icons/login-icon.png" alt="">
+                                    <img src="img/icons/039-discount.png" alt="">
                                 </div>
                                 <div class="hiw-feature-details media-body">
                                     <h5>MATERIALS</h5>
-                                    <p>Made of iron, brass, copper and zinc alloy.</p>
+                                    <p>The coin is made of a blend of iron, brass, copper and zinc alloy.</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-4 col-sm-offset-4 p-0 wow fadeIn" data-wow-duration="2s" data-wow-delay="0.2s">
                             <div class="hiw-feature two media">
                                 <div class="hiw-feature-icon media-left">
-                                    <img src="img/icons/testing-jar-icon.png" alt="">
+                                    <img src="img/icons/022-shopping-basket.png" alt="">
                                 </div>
                                 <div class="hiw-feature-details media-body">
                                     <h5>Size & Weight</h5>
@@ -122,7 +118,7 @@
                         <div class="col-sm-4 p-0 mt-140 wow fadeIn" data-wow-duration="2s" data-wow-delay="0.4s">
                             <div class="hiw-feature three media">
                                 <div class="hiw-feature-icon media-left">
-                                    <img src="img/icons/data-analysis-icon.png" alt="">
+                                    <img src="img/icons/048-like.png" alt="">
                                 </div>
                                 <div class="hiw-feature-details media-body">
                                     <h5>DATA ANALYSIS</h5>
@@ -133,7 +129,7 @@
                         <div class="col-sm-4 col-sm-offset-4 p-0 mt-140 wow fadeIn" data-wow-duration="2s" data-wow-delay="0.6s">
                             <div class="hiw-feature four media">
                                 <div class="hiw-feature-icon media-left">
-                                    <img src="img/icons/bulb-icon.png" alt="">
+                                    <img src="img/icons/029-money.png" alt="">
                                 </div>
                                 <div class="hiw-feature-details media-body">
                                     <h5>SHOW RESULT</h5>
@@ -338,7 +334,7 @@
                     <li><a href="#"><i class="icofont icofont-social-instagram"></i></a></li>
                 </ul>
                 <div class="copyright text-center">
-                    <p>Copyright @ 2017 <a href="http://marveltheme.com/" target="_blank">marveltheme</a> all right reserved.</p>
+                    <p>Copyright @ 2017</p>
                 </div>
             </div>
         </footer>
