--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html class="no-js" lang="zxx">
 
 <head>
-   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- Place favicon.ico in the root directory -->
     <link rel="icon" href="favicon.ico">
     <!-- all additional css -->
