--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
                             <p>The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemmorative coin.</p>
                             <p style="color:#ee0f6f">* Disclaimer: This collectible item does not have any actual Bitcoin value.</p>
                             <div class="button-group">
-                                <a href="#how-it-works-area" class="btn btn-style-2">
-                                    <p class="dsp-tc"><span>LEARN</span> MORE</p>
+                                <script src="https://gumroad.com/js/gumroad.js"></script>
+                                <a href="https://gum.co/collectorbitcoin" target="_blank" class="btn btn-style-2">
+                                    <p class="dsp-tc"><span>GET IT</span> NOW</p>
                                 </a>
                             </div>
                         </div>
