--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                     <div class="col-sm-12">
                         <div class="section-heading shape-2 text-center">
                             <h2>FEATURES</h2>
-                            <p>Lorem ipsum madolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor coli incididunt ut labore Lorem ipsum madolor sit amet, consectetur adipisicing incididunt.</p>
-                        </div>
+                           </div>
                     </div>
                 </div>
                 <div class="hiw-feature-content style-2">
@@ -101,7 +100,7 @@
                                 </div>
                                 <div class="hiw-feature-details media-body">
                                     <h5>MATERIALS</h5>
-                                    <p>The coin is made of a blend of iron, brass, copper and zinc alloy.</p>
+                                    <p>A perfectly-crafted coin made of a premium blend of iron, brass, copper and zinc alloy.</p>
                                 </div>
                             </div>
                         </div>
@@ -124,8 +123,8 @@
                                     <img src="img/icons/048-like.png" alt="">
                                 </div>
                                 <div class="hiw-feature-details media-body">
-                                    <h5>DATA ANALYSIS</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectet adop adipisicing elit, sed do eiusmod temporara incididunt ugt labore.</p>
+                                    <h5>THE PERFECT GIFT</h5>
+                                    <p>A fanatic friend, a crypto-nerd. The perfect gift.</p>
                                 </div>
                             </div>
                         </div>
@@ -135,8 +134,8 @@
                                     <img src="img/icons/029-money.png" alt="">
                                 </div>
                                 <div class="hiw-feature-details media-body">
-                                    <h5>SHOW RESULT</h5>
-                                    <p>Lorem ipsum dolor sit amet, consectet adop adipisicing elit, sed do eiusmod temporara incididunt ugt labore.</p>
+                                    <h5>BEAUTIFUL</h5>
+                                    <p>Beautifully-weighted, luxurious-feeling. A delightful collector item.</p>
                                 </div>
                             </div>
                         </div>
@@ -207,10 +206,10 @@
                             </div>
                             <div class="pricing-content">
                                 <ul class="table-content">
-                                    <li>100 MB Disk Space</li>
-                                    <li>2 Subdomains</li>
-                                    <li>5 Email Accounts</li>
-                                    <li>Webmail Support</li>
+                                    <li>The Collector Bitcoin</li>
+                                    <li>Protective Plastic Coin Casing (removable)</li>
+                                    <li>Luxurious Velvety Collector Coin Box</li>
+
                                 </ul>
                             </div>
                             <div class="pricing-footer transition-3s">
