--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>The Collector Bitcoin</title>
     <!-- Place favicon.ico in the root directory -->
     <link rel="icon" href="favicon.ico">
     <!-- all additional css -->
