--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 </div>
                                 <div class="hiw-feature-details media-body">
                                     <h5>THE PERFECT GIFT</h5>
-                                    <p>A fanatic friend, a crypto-nerd. The perfect gift.</p>
+                                    <p>A fanatic friend? A crypto-nerd? A perfect gift for anyone.</p>
                                 </div>
                             </div>
                         </div>
