--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 </div>
                                 <div class="hiw-feature-details media-body">
                                     <h5>MATERIALS</h5>
-                                    <p>A perfectly-crafted coin made of a premium blend of iron, brass, copper and zinc alloy.</p>
+                                    <p>This perfectly-crafted coin is made of a premium blend of iron, brass, copper and zinc alloy.</p>
                                 </div>
                             </div>
                         </div>
