Added Purchase Box

--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
                                 </ul>
                             </div>
                             <div class="pricing-footer transition-3s">
-                                <a class="btn btn-style-2 btn-bordered-grad" href="#">purchase</a>
+                                <a href="https://gum.co/collectorbitcoin" target="_blank" class="btn btn-style-2">
+                                    <p class="dsp-tc"><span>GET IT</span> NOW</p>
                             </div>
                         </div>
                     </div>
