--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <div class="single-price-table four text-center transition-3s">
                             <div class="pricing-head">
                                 <div class="price-tage-wrap">
-                                    <h1 class="price-value transition-3s"><sub class="doller-sign">$</sub>25<sub class="duration">USD</sub></h1>
+                                    <h1 class="price-value transition-3s"><sub class="doller-sign">$</sub>40<sub class="duration">CAD</sub></h1>
                                 </div>
                                 <h5 class="plan-title blue-grad-bg-2">PRE-ORDER TODAY</h5>
                             </div>
