--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                                 </ul>
                             </div>
                             <div class="pricing-footer transition-3s">
-                                <a href="https://gum.co/collectorbitcoin" target="_blank" class="btn btn-style-2">
+                                <a href="https://gum.co/collectorbitcoin" target="_blank" class="btn btn-style-2 btn-bordered-grad">
                                     <p class="dsp-tc"><span>GET IT</span> NOW</p>
                                 </a>
                             </div>
