--- a/index.html
+++ b/index.html
@@ -188,9 +188,8 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="section-heading shape-2 text-center">
-                            <h2>PRICING TABLE</h2>
-                            <p>Lorem ipsum madolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor coli incididunt ut labore Lorem ipsum madolor sit amet, consectetur adipisicing incididunt.</p>
-                        </div>
+                            <h2>PRICING</h2>
+                           </div>
                     </div>
                 </div>
                 <div class="pricing-table-style-2 row">
@@ -214,7 +213,7 @@
                             </div>
                             <div class="pricing-footer transition-3s">
                                 <a href="https://gum.co/collectorbitcoin" target="_blank" class="btn btn-style-2 btn-bordered-grad">
-                                    <p class="dsp-tc"><span>GET IT</span> NOW</p>
+                                    <p class="dsp-tc"><span>PRE-ORDER</span> NOW</p>
                                 </a>
                             </div>
                         </div>
