Remove Social Icons

--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
         <!-- footer area start -->
         <footer id="footer-area" class="home-style-2">
             <div class="container">
-                <ul class="social list-inline text-center home-style-2">
+                <!--<ul class="social list-inline text-center home-style-2">
                     <li><a href="#"><i class="icofont icofont-social-facebook"></i></a></li>
                     <li><a href="#"><i class="icofont icofont-social-google-plus"></i></a></li>
                     <li><a href="#"><i class="icofont icofont-social-twitter"></i></a></li>
                     <li><a href="#"><i class="icofont icofont-social-instagram"></i></a></li>
-                </ul>
+                </ul>-->
                 <div class="copyright text-center">
                     <p>Copyright @ 2017</p>
                 </div>
