--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <!-- subscription area end -->
         
         <!-- footer area start -->
-        <footer id="footer-area" class="home-style-2">
+        <footer id="footer-area" class="home-style-2 ptb-120">
             <div class="container">
                 <!--<ul class="social list-inline text-center home-style-2">
                     <li><a href="#"><i class="icofont icofont-social-facebook"></i></a></li>
