Added "What You Get:"

--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
                                 <h5 class="plan-title blue-grad-bg-2">PRE-ORDER TODAY</h5>
                             </div>
                             <div class="pricing-content">
+                                <p><strong>What you get:</strong></p>
                                 <ul class="table-content">
                                     <li>The Collector Bitcoin</li>
                                     <li>Protective Plastic Coin Casing (removable)</li>
