Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     <link rel="stylesheet" href="css/responsive.css">
     <!-- modernizr js -->
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    
+    <!-- Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110542173-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-110542173-1');
+    </script>
+
 
 </head>
 
