--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="container">
                         <div class="slider-text wow fadeIn">
                             <h1><span>The Collector </span>Bitcoin</h1>
-                            <p>The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemmorative coin.</p>
+                            <p>The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.</p>
                             <p style="color:#ee0f6f">* Disclaimer: This collectible item does not have any actual Bitcoin value.</p>
                             <div class="button-group">
                                 <script src="https://gumroad.com/js/gumroad.js"></script>
