Added Meta Tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- COMMON TAGS -->
+    <meta charset="utf-8">
     <title>The Collector Bitcoin</title>
+    <!-- Search Engine -->
+    <meta name="description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
+    <meta name="image" content="https://imgur.com/a/7OKJY">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="The Collector Bitcoin">
+    <meta itemprop="description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
+    <meta itemprop="image" content="https://imgur.com/a/7OKJY">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="The Collector Bitcoin">
+    <meta name="twitter:description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
+    <meta name="twitter:site" content="@izzydoesizzy">
+    <meta name="twitter:creator" content="@izzydoesizzy">
+    <meta name="twitter:image:src" content="https://imgur.com/a/7OKJY">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="The Collector Bitcoin">
+    <meta name="og:description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
+    <meta name="og:image" content="https://imgur.com/a/7OKJY">
+    <meta name="og:url" content="collectorbitcoin.com">
+    <meta name="og:site_name" content="The Collector Bitcoin">
+    <meta name="og:type" content="website">
     <!-- Place favicon.ico in the root directory -->
     <link rel="icon" href="favicon.ico">
     <!-- all additional css -->
