Changed Meta Tags to Property

--- a/index.html
+++ b/index.html
@@ -7,26 +7,27 @@
     <meta charset="utf-8">
     <title>The Collector Bitcoin</title>
     <!-- Search Engine -->
-    <meta name="description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
-    <meta name="image" content="https://imgur.com/a/7OKJY">
+    <meta property="description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
+    <meta property="image" content="https://imgur.com/a/7OKJY">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="The Collector Bitcoin">
     <meta itemprop="description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
     <meta itemprop="image" content="https://imgur.com/a/7OKJY">
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="The Collector Bitcoin">
-    <meta name="twitter:description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
-    <meta name="twitter:site" content="@izzydoesizzy">
-    <meta name="twitter:creator" content="@izzydoesizzy">
-    <meta name="twitter:image:src" content="https://imgur.com/a/7OKJY">
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:title" content="The Collector Bitcoin">
+    <meta property="twitter:description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
+    <meta property="twitter:site" content="@izzydoesizzy">
+    <meta property="twitter:creator" content="@izzydoesizzy">
+    <meta property="twitter:image:src" content="https://imgur.com/a/7OKJY">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta name="og:title" content="The Collector Bitcoin">
-    <meta name="og:description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
-    <meta name="og:image" content="https://imgur.com/a/7OKJY">
-    <meta name="og:url" content="collectorbitcoin.com">
-    <meta name="og:site_name" content="The Collector Bitcoin">
-    <meta name="og:type" content="website">
+    <meta property="og:title" content="The Collector Bitcoin">
+    <meta property="og:description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
+    <meta property="og:image" content="https://imgur.com/a/7OKJY">
+    <meta property="og:url" content="collectorbitcoin.com">
+    <meta property="og:site_name" content="The Collector Bitcoin">
+    <meta property="og:type" content="website">
+    
     <!-- Place favicon.ico in the root directory -->
     <link rel="icon" href="favicon.ico">
     <!-- all additional css -->
