Update Imgur Links to JPG

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <title>The Collector Bitcoin</title>
     <!-- Search Engine -->
     <meta property="description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
-    <meta property="image" content="https://imgur.com/a/7OKJY">
+    <meta property="image" content="https://i.imgur.com/9fleVjz.jpg">
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="The Collector Bitcoin">
     <meta itemprop="description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
-    <meta itemprop="image" content="https://imgur.com/a/7OKJY">
+    <meta itemprop="image" content="https://i.imgur.com/9fleVjz.jpg">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="The Collector Bitcoin">
     <meta property="twitter:description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
     <meta property="twitter:site" content="@izzydoesizzy">
     <meta property="twitter:creator" content="@izzydoesizzy">
-    <meta property="twitter:image:src" content="https://imgur.com/a/7OKJY">
+    <meta property="twitter:image:src" content="https://i.imgur.com/9fleVjz.jpg">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta property="og:title" content="The Collector Bitcoin">
     <meta property="og:description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
-    <meta property="og:image" content="https://imgur.com/a/7OKJY">
+    <meta property="og:image" content="https://i.imgur.com/9fleVjz.jpg">
     <meta property="og:url" content="collectorbitcoin.com">
     <meta property="og:site_name" content="The Collector Bitcoin">
     <meta property="og:type" content="website">
