Changed Title Name

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <meta property="description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
     <meta property="image" content="img/bitcoinimg.jpg">
     <!-- Schema.org for Google -->
-    <meta itemprop="name" content="The Collector Bitcoin">
+    <meta itemprop="name" content="Buy The Collector Bitcoin - Souvenir Coin">
     <meta itemprop="description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
     <meta itemprop="image" content="img/bitcoinimg.jpg">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:title" content="The Collector Bitcoin">
+    <meta property="twitter:title" content="Buy The Collector Bitcoin - Souvenir Coin">
     <meta property="twitter:description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
     <meta property="twitter:site" content="@izzydoesizzy">
     <meta property="twitter:creator" content="@izzydoesizzy">
     <meta property="twitter:image:src" content="img/bitcoinimg.jpg">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
-    <meta property="og:title" content="The Collector Bitcoin">
+    <meta property="og:title" content="Buy The Collector Bitcoin - Souvenir Coin">
     <meta property="og:description" content="The Collector Bitcoin is a luxury collector item for Bitcoin enthusiasts. If you're an investor or simply a tech nerd, nothing says it more than this commemorative coin.">
     <meta property="og:image" content="img/bitcoinimg.jpg">
     <meta property="og:url" content="collectorbitcoin.com">
