--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="hiw-feature-content style-2">
                     <div class="hiw-mockup style-2">
-                        <img src="img/bitcoin-coin.jpg" alt="" class="img-responsive center-block">
+                        <img src="img/coinspin-slow.gif" alt="" class="img-responsive center-block">
                     </div>
                     <div class="row">
                         <div class="col-sm-4 p-0 wow fadeIn" data-wow-duration="2s">
