--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <div class="single-price-table four text-center transition-3s">
                             <div class="pricing-head">
                                 <div class="price-tage-wrap">
-                                    <h1 class="price-value transition-3s"><sub class="doller-sign">$</sub>40<sub class="duration">CAD</sub></h1>
+                                    <h1 class="price-value transition-3s"><sub class="doller-sign">$</sub>15<sub class="duration">CAD</sub></h1>
                                 </div>
                                 <h5 class="plan-title blue-grad-bg-2">PRE-ORDER TODAY</h5>
                             </div>
@@ -373,7 +373,7 @@
                     <li><a href="#"><i class="icofont icofont-social-twitter"></i></a></li>
                     <li><a href="#"><i class="icofont icofont-social-instagram"></i></a></li>
                 </ul>-->
-                <div class="copyright text-center">
+                <div class="copyright text-center ptb-30">
                     <p>Copyright @ 2017</p>
                 </div>
             </div>
