--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <p style="color:#ee0f6f">* Disclaimer: This collectible item does not have any actual Bitcoin value.</p>
                             <div class="button-group">
                                 <script src="https://gumroad.com/js/gumroad.js"></script>
-                                <a href="https://gum.co/collectorbitcoin" target="_blank" class="btn btn-style-2">
+                                <a href="https://collectorbitcoin.myshopify.com/cart/38130392924335:1?channel=buy_button" target="_blank" class="btn btn-style-2">
                                     <p class="dsp-tc"><span>GET IT</span> NOW</p>
                                 </a>
                             </div>
@@ -218,7 +218,7 @@
         </section>
         <!-- fun fact area end -->
         
-        <!-- pricing table area start -->
+        <!-- pricing table area start 
         <section id="pricing-table-area" class="overlay-white ptb-120">
             <div class="container">
                 <div class="row">
@@ -263,7 +263,7 @@
                     
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- pricing table area end -->
         <!-- frequently asked questions area start -->
         <!-- <section id="faq-area" class="faq-home-2 ptb-120">
@@ -380,7 +380,7 @@
                     <li><a href="#"><i class="icofont icofont-social-instagram"></i></a></li>
                 </ul>-->
                 <div class="copyright text-center ptb-30">
-                    <p>Copyright @ 2017</p>
+                    <p>Copyright @ 2021</p>
                 </div>
             </div>
         </footer>
